scss/_social.scss
// https://www.flaticon.com/packs/social-16

.social {
	text-align: center;
	&__icon {
		display: inline-block;
		width: 9vw;
		height: 9vw;
		margin: 0 2vw;
		@media (min-width: $tablet) {
			width: 5vw;
			height: 5vw;
			margin: 0 1vw;
		}
		@media (min-width: $desktop) {
			width: 4vw;
			height: 4vw;
		}
		@media (min-width: $desktop-lg) {
			width: 3vw;
			height: 3vw;
		}
		a {
			color: $gray;
			opacity: 0.8;
			transition: color 0.3s ease-out, opacity 0.5s ease-in;
			&:hover {
				opacity: 1;
				color: $pink;
			}
		}
		svg {
			width: 100%;
			height: 100%;
		}
	}
}

